# costream

./: .gitignore  README.md  demo_pipeline.ipynb  environment.yml  pyproject.toml  test_components.py
costream.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
costream/data/: __init__.py  loader.py  utils.py
costream/evaluation/: __init__.py  cross_validation.py  event_detection.py  tester.py  visualization.py
costream/model/: __init__.py  cost_classifier_cv.py  metrics.py
costream/segmentation/: __init__.py  streaming_segmenter.py  training_segmenter.py
examples/: demo_ecg_anomaly.ipynb  demo_kdd_tsad_135.ipynb  demo_pipeline.ipynb
examples/fall_detection/: fall_detection.ipynb  falling_forward.ipynb  piping.py
examples/fall_detection/results/: dummy_cv_results.csv  real_cv_results.csv  sisfall_cv_results.csv  sisfall_subject_split.json  threshold_tuning_results.csv
tests/: conftest.py  test_data.py  test_evaluation.py  test_model.py  test_segmentation.py
