[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "costream"
version = "0.1.0"
description = "Cost-Sensitive Streaming Event Detection"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
authors = [
  {name = "Timilehin Aderinola", email = "timiderinola@gmail.com"},
]
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn"
]

[project.optional-dependencies]
extra = ["openpyxl", "aeon"]

[tool.setuptools.packages.find]
include = ["costream*"]